--- a/style/style.css
+++ b/style/style.css
@@ -8,13 +8,6 @@
     font-weight: normal;
 }
 
-@keyframes pulsate {
-    0%{
-        box-shadow: 
-        0 0 25px var(--cor4),
-        0 0 25px var(--cor1);
-    }
-}
 
 
 :root {
@@ -108,7 +101,8 @@ main {
     padding: 20px;
     background-color: white;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.416);
-    border-radius: 0px 0px 10px 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 main h1 {
